# Obfuscation_Generalization_for_Qwen3-8B_configs

./: .env.example  .gitignore  README.md  TRAIN_8B.md  all_eval_scripts.sh  asdf.txt  commands.sh  eval_run_all_steps.sh  pyproject.toml  requirements.txt  setup.sh  setup_auth.sh  todo711.txt  yamls_to_write.txt
analysis/: README_TESTS.md  analyze_metrics.py  cleanup_wandb_runs.py  download_wandb_metrics.py  download_wandb_trial_data.py  find_duplicate_wandb_runs.py  find_missing_steps.py  model_query.py  multiple_analysis.py  plot_eval_folds.py  test_analyze_metrics.py  visualization.py
configs/: config.yaml  config_eval.yaml
data_processing/: run_pipeline.py  seperate_datasets.py
dataset_modification_scripts/: add_dataset_source.py  combine_datasets.py  combine_datasets_filtered.ipynb  combine_datasets_filtered.py  create_mmlu_dataset.py  curation.py  format.py  modify_code_selection.py  modify_world_affecting.py
final_analysis/: barcharts.py  base_rates_barchart.py  download_and_parse.py  generate_final_figures.py  visualise.py  visualise_baselines.py
final_viz/: visualisation.py
fireworks/: test.py
multi-job-script/: README.md  main.py
random_scripts/: combine_datasets.py  combine_datasets_filtered.py  modify_revealing_score.py  modify_sycophancy_fact.py
scripts/: eval_dispatch.sh  train_8b_full.sh  train_dispatch.sh
slurm_scripts/: eval_dispatch.sbatch  full_xml_summary_all_evals_run_seed_67.sh  full_xml_summary_nsp_evals_run_seed_67.sh  full_xml_summary_nsp_evals_run_seed_67_runpod.sh  full_xml_summary_nsp_training_run_seed_67.sh  (+3 more)
src/: eval.py  (+2 more)
(+1463 files in other folders)
