[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obfuscation-generalization"
version = "0.1.0"
description = "Training and evaluation framework for obfuscation generalization research"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]